--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">supply 350</h5>
+                            <h2>$160</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                         </div>
@@ -185,20 +186,23 @@
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
+
+                            <h2>$160</h2>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                         </div>
                         <div class="m-3 ">
                             <button class="btn btn-warning">Buy Now </button>
                         </div>
-                        </div>
                     </div>
-           
+                </div>
+
                 <div class="col">
                     <div class="card border-0  shadow-lg h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red airmax</h5>
+                            <h2>$160</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This card has even longer content than the first to show that equal
                                 height action.</p>
@@ -206,12 +210,68 @@
                         <div class="m-3">
                             <button class="btn btn-warning">Buy Now </button>
                         </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <!-- shoes section end  -->
+        <!-- bagpack section -->
+        <section class="my-5">
+            <h2>Bagpack</h2>
+
+            <div class="row row-cols-1  row-cols-md-2 g-4 row-cols-lg-3">
+
+                <div class="col">
+                    <div class="card border-0  shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red laltu bag</h5>
+                            <h2>$160</h2>
+
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0  shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+
+                            <h2>$160</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3 ">
+                            <button class="btn btn-warning">Buy Now </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card border-0  shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+
+                            <h2>$160</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3 ">
+                            <button class="btn btn-warning">Buy Now </button>
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
         </section>
-        <!-- shoes section end  -->
+        <!-- bagpack section -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
