--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>Panda commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+        <!-- custom css  -->
+        <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" ">
@@ -29,13 +32,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Shoes</a>
+                                <a class="nav-link" href="#shoes">Shoes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Backpack</a>
+                                <a class="nav-link" href="#bagpack">Bagpack</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Subscribe</a>
+                                <a class="nav-link" href="#subscribe">Subscribe</a>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +57,7 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
@@ -64,7 +67,7 @@
                                         front of funky world.</p>
                                     <h1>$420</h1>
 
-                                    <button class="btn btn-warning">Buy Now</button>
+                                    <button class="btn panda-btn-buy-now">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -72,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
@@ -82,7 +85,7 @@
                                         front of funky world.</p>
                                     <h1>$1200</h1>
 
-                                    <button class="btn btn-warning">Buy Now</button>
+                                    <button class="btn panda-btn-buy-now">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -90,7 +93,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active bg-info border rounded p-5">
+                    <div class="carousel-item active panda-bg-info border rounded p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
@@ -100,7 +103,7 @@
                                         front of funky world.</p>
                                     <h1>$600</h1>
 
-                                    <button class="btn btn-warning">Buy Now</button>
+                                    <button class="btn panda-btn-buy-now">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -132,7 +135,7 @@
         <!-- categories start -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-4 categories">
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around ">
                             <h1 class="text-white">Watch</h1>
@@ -162,7 +165,7 @@
         <!-- categories end -->
 
         <!-- shoes section start  -->
-        <section class="my-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
 
             <div class="row row-cols-1  row-cols-md-2 g-4 row-cols-lg-3">
@@ -177,7 +180,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now </button>
+                            <button class="btn panda-btn-buy-now">Buy Now </button>
                         </div>
                     </div>
                 </div>
@@ -192,7 +195,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3 ">
-                            <button class="btn btn-warning">Buy Now </button>
+                            <button class="btn panda-btn-buy-now">Buy Now </button>
                         </div>
                     </div>
                 </div>
@@ -208,7 +211,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now </button>
+                            <button class="btn panda-btn-buy-now">Buy Now </button>
                         </div>
                     </div>
                 </div>
@@ -217,7 +220,7 @@
         </section>
         <!-- shoes section end  -->
         <!-- bagpack section -->
-        <section class="my-5">
+        <section class=" container my-5" id="bagpack">
             <h2>Bagpack</h2>
 
             <div class="row row-cols-1  row-cols-md-2 g-4 row-cols-lg-3">
@@ -233,7 +236,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now </button>
+                            <button class="btn panda-btn-buy-now">Buy Now </button>
                         </div>
                     </div>
                 </div>
@@ -248,7 +251,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3 ">
-                            <button class="btn btn-warning">Buy Now </button>
+                            <button class="btn panda-btn-buy-now">Buy Now </button>
                         </div>
                     </div>
                 </div>
@@ -264,7 +267,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3 ">
-                            <button class="btn btn-warning">Buy Now </button>
+                            <button class="btn panda-btn-buy-now">Buy Now </button>
                         </div>
                     </div>
                 </div>
@@ -272,7 +275,29 @@
             </div>
         </section>
         <!-- bagpack section -->
+
+ <!-- Subscribe section start -->
+ <section style="height:300px" class="container  rounded-3 d-flex justify-content-center panda-bg-info  align-items-center" id="subscribe">
+<div class="d-flex flex-column">
+
+  <h2>LET'S STAY IN TOUCH</h2>
+  <p>Get updates on sales specials and more</p>
+  <form>
+    <div class="mb-1">
+     
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+
+  </form>
+</div>
+</section>
+ <!-- Subscribe section end -->
     </main>
+ <footer class="mt-3 text-center">
+    <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+ </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
