--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-        <!-- custom css  -->
-        <link rel="stylesheet" href="css/style.css">
+    <!-- custom css  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -276,27 +276,28 @@
         </section>
         <!-- bagpack section -->
 
- <!-- Subscribe section start -->
- <section style="height:300px" class="container  rounded-3 d-flex justify-content-center panda-bg-info  align-items-center" id="subscribe">
-<div class="d-flex flex-column">
+        <!-- Subscribe section start -->
+        <section style="height:300px"
+            class="container  rounded-3 d-flex justify-content-center panda-bg-info  align-items-center" id="subscribe">
+            <div class="d-flex flex-column">
 
-  <h2>LET'S STAY IN TOUCH</h2>
-  <p>Get updates on sales specials and more</p>
-  <form>
-    <div class="mb-1">
-     
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales specials and more</p>
+                <form>
+                    <div class="mb-1">
 
-  </form>
-</div>
-</section>
- <!-- Subscribe section end -->
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+
+                </form>
+            </div>
+        </section>
+        <!-- Subscribe section end -->
     </main>
- <footer class="mt-3 text-center">
-    <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
- </footer>
+    <footer class="mt-3 text-center">
+        <p>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
